--- a/BuddhaBowls/UserControls/AddInvStep2.xaml
+++ b/BuddhaBowls/UserControls/AddInvStep2.xaml
@@ -16,11 +16,11 @@
         </Grid.RowDefinitions>
         <Button Grid.Row="0" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" Margin="0, 0, 35, 0"
                 Command="{Binding AddVendorCommand}">
-            <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <iconPacks:PackIconFontAwesome Kind="PlusSolid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Button>
         <Button Grid.Row="0" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right" Margin="0, 0, 5, 0"
                 Command="{Binding DeleteVendorCommand}">
-            <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="MinusSolid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Button>
         <DataGrid Grid.Row="1" ItemsSource="{Binding VendorList}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="1, 1, 1, 1"
                   ScrollViewer.VerticalScrollBarVisibility="Auto" SelectedItem="{Binding SelectedItem}" AutoGenerateColumns="False"
