--- a/BuddhaBowls/UserControls/InventoryHistoryControl.xaml
+++ b/BuddhaBowls/UserControls/InventoryHistoryControl.xaml
@@ -15,11 +15,11 @@
         <local:PeriodSelectorControl Grid.Row="0" DataContext="{Binding PeriodSelector}" VerticalAlignment="Center" Margin="0, 0, 0, 0" />
         <Button Grid.Row="0" Height="30"  Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
                 VerticalAlignment="Bottom" Margin="35, 0" Command="{Binding AddCommand}">
-            <iconPacks:PackIconFontAwesome Kind="Plus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <iconPacks:PackIconFontAwesome Kind="PlusSolid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Button>
         <Button Grid.Row="0" Height="30" Width="30" Background="Transparent" BorderBrush="Transparent" HorizontalAlignment="Right"
                 VerticalAlignment="Bottom" Margin="5, 0" Command="{Binding DeleteCommand}">
-            <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="Minus" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+            <iconPacks:PackIconFontAwesome Grid.Row="2" Kind="MinusSolid" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
         </Button>
         <Button Grid.Row="0" Height="30" Width="70" Content="View" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="70, 0"
                 Command="{Binding ViewCommand}" />
